--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -103,6 +103,7 @@
                             settings.bind="options_settings"
                             has_groups.bind="has_grouped_topics"
                             ms-change.delegate="handle_topic_change($event)"
+                            remove-option.delegate="remove_topic($event)"
                             clear_selections_now.bind="clear_selected_topics_now"
                             style="margin-top:5px;">
                         </multi-select>
