--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -58,7 +58,7 @@
                             style="position:absolute;left:82px;top:4px;"
                             click.delegate="remove_option(item, $event, $index)">
                         </i>
-                        <span if.bind="! item.editing" style="height:24px;padding-right:5px;">${item.option.name}</span>
+                        <span if.bind="! item.editing" style="height:24px;padding-right:5px;" class.bind="item.option.is_group ? 'option-group' : ''">${item.option.name}</span>
                         <input type="text" if.bind="item.editing" value.bind="item.option.name" change.delegate="name_changed(item, $event)" style="width:55%" >
                     </div>
                 </li>
@@ -72,7 +72,7 @@
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' | take : 999">
                     <div class="option-item" css="margin:0;padding:0;padding-right:2px;width:${inner_width}px">
-                        <a click.delegate="select_option(option)">${option.name}</a>
+                        <a click.delegate="select_option(option)"  class.bind="option.is_group ? 'option-group' : ''">${option.name}</a>
                     </div>
                 </li>
             </ul>
