--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -18,6 +18,9 @@
                                 <button class="btn btn-basic btn-md" click.trigger="save_merges($event)">
                                     ${'photos.save-merges' & t}
                                 </button>
+                                <button class="btn btn-basic btn-md" click.trigger="save_topic_group($event)">
+                                    ${'photos.save-topic-group' & t}
+                                </button>
                                 <help topic="photos.can-modify-tags", position="bottom"></help>
                             </div>
                             <div class="form-group" if.bind="user.editing && checked_stories.size == 0">
@@ -103,6 +106,7 @@
                             settings.bind="options_settings"
                             has_groups.bind="has_grouped_topics"
                             ms-change.delegate="handle_topic_change($event)"
+                            new-name.delegate="add_topic($event)"
                             remove-option.delegate="remove_topic($event)"
                             clear_selections_now.bind="clear_selected_topics_now"
                             style="margin-top:5px;">
