for now support only jpeg

--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -22,7 +22,7 @@
                                     ${'photos.select-photos' & t}
                                     </label>
                                 <div>
-                                    <input style="display:none" type="file" multiple id="photos" accept="image/*" files.bind="photos">
+                                    <input style="display:none" type="file" multiple id="photos" accept="image/jpeg" files.bind="photos">
                                 </div>
                             </div>
                             <div class="form-group" if.bind="photos && photos.length > 0">
