--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -88,11 +88,14 @@
                 </div>
                 <div class="col-md-3" style="padding-right:6px;">
                     <div class="row" style="margin-bottom:15px;position:relative;">
+                        <span show.bind="false">${user_editing}</span>
                         <help topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <multi-select options.bind="topic_list"
                             selected_options.bind="params.selected_topics"
                             settings.bind="options_settings"
                             has_groups.bind="has_grouped_topics"
+                            new-name.delegate="add_topic($event)"
+                            name-changed.delegate="topic_name_changed($event)"
                             name="topics"
                             place_holder_text="photos.click-topic"
                             clear_selections_now.bind="clear_selected_topics_now"
