--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -107,6 +107,7 @@
                             has_groups.bind="has_grouped_topics"
                             ms-change.delegate="handle_topic_change($event)"
                             new-name.delegate="add_topic($event)"
+                            name-changed.delegate="topic_name_changed($event)"
                             remove-option.delegate="remove_topic($event)"
                             clear_selections_now.bind="clear_selected_topics_now"
                             style="margin-top:5px;">
