--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -77,6 +77,8 @@
                             settings.bind="options_settings"
                             has_groups.bind="has_grouped_topics"
                             name="topics"
+                            new-name.delegate="add_topic($event)"
+                            name-changed.delegate="topic_name_changed($event)"
                             place_holder_text="photos.click-topic"
                             clear_selections_now.bind="clear_selected_topics_now"
                             ms-change.delegate="handle_topic_change($event) ">
