--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -78,6 +78,7 @@
                             has_groups.bind="has_grouped_topics"
                             name="topics"
                             new-name.delegate="add_topic($event)"
+                            remove-option.delegate="remove_topic($event)"
                             name-changed.delegate="topic_name_changed($event)"
                             place_holder_text="photos.click-topic"
                             clear_selections_now.bind="clear_selected_topics_now"
