apply topics to selected stories

--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -36,6 +36,7 @@
                             </div>
                             <div class="form-group">
                                 <button if.bind="user.editing && checked_stories.size > 0 && params.selected_topics.length>0"
+                                    click.trigger="apply_topics_to_selected_stories()"
                                     class="btn btn-basic btn-md">
                                     ${'stories.apply-to-selected' & t}
                                 </button>
