--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -7,12 +7,12 @@
                 <!--<i if.bind="!settings.no_expand" class="fa fa-sm fa-expand is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>-->
                 <i if.bind="user.privileges.EDITOR && user.editing" class="far fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
                 <i if.bind="settings.deletable && user.privileges.ADMIN && user.editing" class="far fa-sm fa-trash-alt is-link" t="[title]stories.delete" click.trigger="delete_story(story)">&nbsp;</i>
-                <i if.bind="settings.checkable && user.editing" class="fa${story.checked ? '' : 'r'} fa-circle fa-sm is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
+                <i if.bind="settings.checkable && user.editing" class="fa${checked ? '' : 'r'} fa-circle fa-sm is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
             </span>
             <span if.bind="settings.show_date &&story.timestamp">${story.timestamp | formatdate} |&nbsp;</span>
             <span if.bind="settings.show_author && story.author">${story.author}:&nbsp;</span>
             <span if.bind="settings.show_author && ! story.author">${'stories.unknown-source' & t}:&nbsp;</span>
-            <div class="checkable ${story.checked ? 'selected' : ''}"><strong innerhtml.bind="story.name"></strong></div>
+            <div class="checkable ${checked ? 'selected' : ''}"><strong innerhtml.bind="story.name"></strong></div>
             <span if.bind="user.privileges.EDITOR && user.editing && story.updater.name"> ${updated_by}: ${story.updater.name} @${story.timestamp}</span>
         </div>
 
