--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -5,13 +5,9 @@
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;">
                 <i class="far fa-share" t="[title]go-back" click.trigger="go_back()"></i>
             </h3>
-            <h3 if.bind="! user.editing" dir="rtl" style="float: right;margin:0px;">
-                ${photo_name}
+            <h3 dir="rtl" style="float: right;margin:0px;">
+                ${photo_story.name}
             </h3>
-            <form class="form-inline" if.bind="user.editing">
-                <input type="search" value.bind="photo_name" change.trigger="update_photo_caption()" 
-                    style="float:right;direction:rtl;padding-top:3px;padding-right:10px;width:800px;" />
-            </form>
         </div>
         <div class="row">
             <div class="col-md-7" click.trigger="open_full_size_photo()">
