--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -70,7 +70,7 @@
                         </button>
                     </form>
                     <ul style="width:100%;padding:0;height:560px;overflow:auto;list-style-type: none;padding-left:20px;" ref="scroll_area">
-                        <li repeat.for="story of story_list | filter: filter : 'name' : 'author' | take : 9999 | sort : 'name'" dir="${theme.rtltr}"
+                        <li repeat.for="story of story_list | filter: filter : '*selected' : 'name' : 'author' | take : 9999 | sort : 'name'" dir="${theme.rtltr}"
                             if.bind="story.used_for==used_for"
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;margin-bottom:16px;">
                             <div style="height:130px;overflow:hidden;padding-right:20px;padding-left:20px;padding-top:0px;cursor:pointer;"
