documents. previews. wip.

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -37,7 +37,7 @@
                         <h4 class="panel-story-header" dir="rtl">
                             ${story.name}
                         </h4>
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story.story_preview"></p>
+                        <p dir.bind="theme.rtltr" class="${theme.font_size}" innerhtml.bind="story.preview"></p>
                     </div>
                 </li>
             </ul>
