--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -155,7 +155,7 @@
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel member-story-preview" show.bind="story_1.story_text != ''" css="height:${story_box_height-85}px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.story_preview">
+                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.preview">
                         </p>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel member-story-preview" show.bind="story_2.story_text != ''" css="height:${story_box_height-85}px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.story_preview">
+                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.preview">
                         </p>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel member-story-preview" show.bind="story_3.story_text != ''" css="height:${story_box_height-85}px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.story_preview">
+                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.preview">
                         </p>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel member-story-preview" show.bind="story_4.story_text != ''" css="height:${story_box_height-85}px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.story_preview ">
+                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.preview ">
                         </p>
                     </div>
                 </div>
