--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -4,7 +4,6 @@
     <div css="width:${width}" class="${settings.divclass} editable-box">
         <div class="preview-header">
             <span show.bind="story.name || user.privileges.EDITOR" dir="${theme.rtltr}" style="padding:0;margin:0;">
-                <!--<i if.bind="!settings.no_expand" class="fa fa-sm fa-expand is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>-->
                 <i if.bind="user.privileges.EDITOR && user.editing" class="far fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
                 <i if.bind="settings.deletable && user.privileges.ADMIN && user.editing" class="far fa-sm fa-trash-alt is-link" t="[title]stories.delete" click.trigger="delete_story(story)">&nbsp;</i>
                 <i if.bind="settings.checkable && user.editing" class="fa${checked ? '' : 'r'} fa-circle fa-sm is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
@@ -18,7 +17,7 @@
         </div>
 
         <div class="fr-view ${settings.class} message-body">
-            <p class="${theme.font_size}" innerhtml.bind="story.story_preview" css="direction:${theme.rtltr};text-align:justify;">
+            <p class="${theme.font_size}" innerhtml.bind="story.preview" css="direction:${theme.rtltr};text-align:justify;">
             </p>
         </div>
     </div>
