--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -27,12 +27,12 @@
             <div class="fr-view" dir="rtl" if.bind="show">
                 <div class="justified-story">
                     <p class="${theme.font_size}" if.bind="! user.editing">
-                        <compose if.bind="story.story_text" view-model='./render-story' model.bind="story.story_text"></compose>
+                        <compose if.bind="story_text" view-model='./render-story' model.bind="story_text"></compose>
                     </p>
                 </div>
             </div>
             <div class="big-story-panel fr-view" if.bind="edit">
-                <froala-editor value.two-way="story.story_text" config.bind="{
+                <froala-editor value.two-way="story_text" config.bind="{
                     iconsTemplate: 'font_awesome_5',
                     toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
                             'color', 'fontSize', 'align', 'html'],
@@ -52,7 +52,7 @@
         <ux-dialog-footer if.bind="edit" style="padding-right:16px;">
             <button class="btn btn-danger btn-warning" click.trigger="cancel()">${'stories.cancel' & t}</button>
             <button class="btn btn-success btn-primary ${dirty_story ? 'btn-warning' : 'disabled'}" click.trigger="save()">${'stories.save' & t}</button>
-            <button class="btn btn-basic btn-primary" click.trigger="clean()">${'stories.clean' & t}</button>
+            <button if.bind="! story.editable_preview" class="btn btn-basic btn-primary" click.trigger="clean()">${'stories.clean' & t}</button>
         </ux-dialog-footer>
     </ux-dialog>
 
