--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -10,9 +10,9 @@
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
                         <form class="form-inline">
-                            <!--<div class="input-group">
+                            <div class="input-group" if.bind="user.privileges.ADVANCED">
                                 <search-input value.bind="filter" placeholder="photos.filter" height="32"></search-input>
-                            </div>-->
+                            </div>
                             <div class="form-group hide-if-small">
                                 <button class="btn btn-basic btn-md" click.delegate="select_member($event)">
                                     ${with_a_member_text}
@@ -74,7 +74,7 @@
                     </div>
                     <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;">
                         <span css="padding:0;margin:0;position:relative;width:${photo_size}px;height:${photo_size}px;"
-                            repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' | take : 9999">
+                            repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
                             <a click.trigger="maximize_photo(photo, $event)" tapandhold="500" longtouch.delegate="toggle_selection(photo, $event)" class.bind="photo.selected" >
                                 <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" 
                                     height="${photo_size}" style="margin:0;cursor:pointer;" />
