--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -108,6 +108,7 @@
                             height.bind="220"
                             settings.bind="options_settings"
                             has_groups.bind="has_grouped_topics"
+                            option_groups.bind="topic_groups"
                             ms-change.delegate="handle_topic_change($event)"
                             new-name.delegate="add_topic($event)"
                             name-changed.delegate="topic_name_changed($event)"
