--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -18,11 +18,17 @@
                                     ${with_a_member_text}
                                 </button>
                             </div>
-                            <div class="form-group" if.bind="phase=='photos.can-modify-tags'">
+                            <div class="form-group" if.bind="phase=='can-merge-topics'">
                                 <button class="btn btn-basic btn-md" click.trigger="save_merges($event)">
                                     ${'photos.save-merges' & t}
                                 </button>
                                 <help topic="photos.can-modify-tags", position="bottom"></help>
+                            </div>
+                            <div if.bind="phase=='can-create-group'" class="form-group">
+                                <button class="btn btn-basic btn-md" click.trigger="save_topic_group($event)">
+                                    ${'photos.save-topic-group' & t}
+                                </button>
+                                <help topic="photos.can-create-group", position="bottom"></help>
                             </div>
                             <div class="form-group">
                                 <button if.bind="selected_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md" click.delegate="download_photos()"><i class="fa fa-upload fa-rotate-180 fa-xs"></i></button>
@@ -94,6 +100,7 @@
                             selected_options.bind="params.selected_topics"
                             settings.bind="options_settings"
                             has_groups.bind="has_grouped_topics"
+                            option_groups.bind="topic_groups"
                             new-name.delegate="add_topic($event)"
                             remove-option.delegate="remove_topic($event)"
                             name-changed.delegate="topic_name_changed($event)"
