--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -71,7 +71,7 @@
             if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' | take : 999">
-                    <div class="option-item" css="margin:0;padding:0;padding-right:2px;width:${inner_width}px" if.bind="option.topic_kind==2 || ! hide_higher">
+                    <div class="option-item" css="margin:0;padding:0;padding-right:2px;width:${inner_width}px" if.bind="option.topic_kind!=1 || ! hide_higher">
                         <a click.delegate="select_option(option)" class.bind="'option-kind-' + option.topic_kind">${option.name}</a>
                     </div>
                 </li>
