--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -3,6 +3,9 @@
 
     <div css="width:${width}" class="${settings.divclass} editable-box">
         <div class="preview-header">
+            <span if.bind="info_content">
+                <info title.bind="info_title" content.bind="info_content"></info>
+            </span>
             <span show.bind="story.name || user.privileges.EDITOR" dir="${theme.rtltr}" style="padding:0;margin:0;">
                 <i if.bind="user.privileges.EDITOR && user.editing" class="far fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
                 <i if.bind="settings.deletable && user.privileges.ADMIN && user.editing" class="far fa-sm fa-trash-alt is-link" t="[title]stories.delete" click.trigger="delete_story(story)">&nbsp;</i>
