--- a/src/resources/elements/info.html
+++ b/src/resources/elements/info.html
@@ -1,8 +1,8 @@
 <template>
     <!--<div style="width:800px">-->
-        <button style="border-radius:50%;width:24px;margin:4px;background-color:rgba(0,0,0,0);" class="btn btn-xs" 
+        <button style="border-radius:50%;width:16px;margin-right:0; margin-top:0; margin-left:4px;padding-right:0;background-color:rgba(0,0,0,0);color:blue" class="btn btn-xs" 
             aubs-popover="custom-popover.bind: customPopover;position.bind: position;" >
-            <i class="far fa-${icon} fa-lg"></i>
+            <i class="far fa-${icon}"></i>
         </button>
 
         <div ref="customPopover" dir="rtl">
