new member creation

--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -2,7 +2,7 @@
     <div style="padding: 15px;padding-top:0;background:lightgray;cursor:default;">
         <div class="row" style="background-color:gray;height:60px;padding-top:13px;">
             <div class="col-md-3">
-                <a click.trigger="create_new_member()" class="btn btn-success cl-create-btn">
+                <a click.delegate="create_new_member()" class="btn btn-success cl-create-btn">
                     <i class="far fa-plus-square"></i>
                     ${'members.new' & t}
                 </a>
