--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-md-3" style="padding-right:6px;">
                     <div class="row multi-select-div" style="margin-bottom:15px;position:relative;">
-                        <span show.bind="false">${user_editing}</span>
+                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
                         <help if.bind="phase=='photos-ready-to-edit'" topic="photos.ready-to-edit", position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <help if.bind="phase=='photos-not-editing'"topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <multi-select options.bind="topic_list"
@@ -112,6 +112,7 @@
                         </multi-select>
                     </div>
                     <div class="row multi-select-div">
+                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'photos.photographers' & t}</div>
                         <multi-select options.bind="photographer_list"
                             place_holder_text="photos.click-photographer"
                             selected_options.bind="params.selected_photographers"
