--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -5,7 +5,7 @@
         <search-input value.bind="filter" placeholder.bind="place_holder_text" height="32" filter-change.delegate="enter_word($event)"></search-input>
     </div>
 
-    <div class="ms-container" css="height:${total_height}px;position:relative">
+    <div class="ms-container">
         <button if.bind="can_add  && ! filter" 
             style="position:absolute;top:60px;left:140px;padding:0;" 
             class="btn btn-success btn-xs cl-create-btn">
@@ -67,7 +67,7 @@
 
         <!-- unselected options -->
         <div class="row options unselected" 
-            css="max-height:${option_list_height}px;" 
+            css="max-height:${option_list_height}px;;min-height:132px;" 
             if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' | take : 999">
@@ -76,6 +76,11 @@
                     </div>
                 </li>
             </ul>
+        </div>
+        <div class="row options unselected" 
+            css="max-height:${option_list_height}px;min-height:132px;" 
+            if.bind="!options || options.length == 0">
+            ${settings.empty_list_message}
         </div>
     </div>
 
