--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -77,7 +77,7 @@
                 <div class="col-md-3">
                     <span show.bind="false">${user_editing}</span>
                     <div class="row" style="margin-bottom:15px;position:relative;">
-                        <!--<help topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>-->
+                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
                         <help if.bind="phase=='photos-ready-to-edit'" topic="videos.ready-to-edit", position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <help if.bind="phase=='photos-not-editing'"topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <multi-select options.bind="topic_list"
@@ -95,6 +95,7 @@
                         </multi-select>
                     </div>
                     <div class="row">
+                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'photos.photographers' & t}</div>
                         <multi-select options.bind="photographer_list"
                             place_holder_text="photos.click-photographer"
                             selected_options.bind="params.selected_photographers"
