context-specific help for multi-select

--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -16,7 +16,7 @@
                         <div class="col-md-1 col-md-offset-5" if.bind="!user.editing"></div>
                         <div class="col-md-6">
                             <div class="input-group" style="width:100%;margin-top:15px;">
-                                <search-input value.bind="filter" change.delegate="update_story_list()" placeholder="terms.filter" height="38"></search-input>
+                                <search-input value.bind="filter" change.delegate="update_story_list()" placeholder="terms.filter" help_topic="terms-help" height="38"></search-input>
                             </div>
                         </div>
                     </div>
