--- a/src/members/members.html
+++ b/src/members/members.html
@@ -6,7 +6,7 @@
                 <div class="col-md-10 col-md-offset-2" style="padding-right:50px;">
                     <div class="inputs-inline" >
                         <div class="input-group" style="padding-top:16px;width:50%;font-size:18px;">
-                            <search-input value.bind="filter" placeholder="members.filter" height="38"></search-input>
+                            <search-input value.bind="filter" placeholder="members.filter" height="38" help_topic="members-help"></search-input>
                         </div>
                         <div class="input-group members-selector" if.bind="! relatives_mode">
                             <select value.bind="order" style="height:38px;border-top:solid 2px gray;border-left:solid 2px gray" dir="rtl" change.trigger="order_changed($event)">
