--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -2,7 +2,7 @@
     <require from="./multi-select.css">
     </require>
     <div class="input-group search-filter" if.bind="options.length > 0">
-        <search-input value.bind="filter" placeholder.bind="place_holder_text" height="32" filter-change.delegate="enter_word($event)"></search-input>
+        <search-input value.bind="filter" placeholder.bind="place_holder_text" height="32" help_topic.bind="settings.help_topic" filter-change.delegate="enter_word($event)"></search-input>
     </div>
 
     <div class="ms-container">
