--- a/src/resources/elements/search-input.html
+++ b/src/resources/elements/search-input.html
@@ -3,12 +3,10 @@
     <div class="search-input input-group" dir="rtl">
         <div class="spyglass-div">
             <!--i class="fa fa-search search"></i-->
-            <help topic="search-input" class="search" position="bottom" css="position:absolute;top:${(height-30)/2}px;right:4px;"></help>
+            <help topic.bind="help_topic" class="search" position="bottom" css="position:absolute;top:${(height-30)/2}px;right:4px;"></help>
         </div>
         <input type="search" value.bind="value" t="[placeholder]${placeholder}" css="height:${height}px;" 
-            keydown.delegate="input_changed($event) & debounce: 1400" 
-            >
-            <!--keypress.delegate="input_changed($event)"-->
+            keydown.delegate="input_changed($event) & debounce: 1400">
         <i class="far fa-times fa-sm remove" if.bind="value" click.trigger="clear_text()" css="top:${(height-14)/2}px;"></i>
     </div>
 </template>
