photo date range

--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -151,7 +151,7 @@
                             label="photos.photos-date" 
                             base_date_str.bind="params.photos_date_str"
                             range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]" 
-                            date_span_size.bind="params.photos_date_span_size">
+                            span_size.bind="params.photos_date_span_size">
                         </date-range>
                     </div>
                 </div>
