our copy of font awesome

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <script id="fr-fek">
         try { (function (k) { localStorage.FEK = k; t = document.getElementById('fr-fek'); t.parentNode.removeChild(t); })('OF2C1B4B3nA16B10D8B4F2D4G3I2I3A8ayC-13sumqmc1uA6gB-11m==') } catch (e) { }
     </script>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css"
-         integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" 
-         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://gbstories.org/gbs__test/static/fontawesome/css/all.css"
+    crossorigin="anonymous">
 </head>
 
 <body aurelia-app="main">
