--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -86,7 +86,7 @@
                             suffix.bind="member.member_info.gender">
                         </selector>
                     </div>
-                    <label class="control-label col-md-6" style="padding-right:0;" >${'members.cause-of-death' & t}:</label>
+                    <label class="control-label col-md-6" style="padding-right:0;" >${'members.cause-of-death' & t}</label>
                 </div>
             </div>
             <!--The right wing of the form-->
@@ -121,7 +121,7 @@
                     <div class="col-md-6" style="padding-left:0;">
                         <selector dict.bind="api.constants.visibility" selectedval.two-way="member.member_info.visibility"></selector>
                     </div>
-                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-birth">${'members.visibility' & t}:</label>
+                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-birth">${'members.visibility' & t}</label>
                 </div>
             </div>
         </form>
