--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -63,7 +63,7 @@
                                         <info title.bind="video_info_title(video)" content.bind="video_info_content(video)"></info>
                                     </span>
                                     <span if.bind="user.editing">
-                                        <i class="fa${video.selected ? 's' : 'r'} fa-circle" click.delegate="toggle_selection(video)"></i>
+                                        <i class="fa${video.selected ? 's' : 'r'} fa-circle" click.delegate="toggle_selection(video, $event, $index)"></i>
                                         <i class="far fa-trash-alt" click.delegate="delete_video(video)"></i>
                                         <i class="far fa-pencil" click.delegate="edit_video_info(video)"></i>
                                     </span>
