--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -33,6 +33,9 @@
                             <div class="form-group">
                                 <button if.bind="selected_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md" click.delegate="download_photos()"><i class="fa fa-upload fa-rotate-180 fa-xs"></i></button>
                             </div>
+                            <div class="form-group" show.bind="download_url">
+                                <a href.bind="download_url" id="download_url">${'photos.download-now' & t}</a>
+                            </div>
                             <div class="form-group">
                                 <button if.bind="user.privileges.ADMIN && selected_photos.size > 0" t="[title]photos.delete" class="btn btn-basic btn-md" click.delegate="delete_selected_photos()"><i class="far fa-trash-alt fa-xs"></i></button>
                             </div>
