--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -49,6 +49,9 @@
                                 </button>
                                 <help topic="photos.can-create-group", position="bottom"></help>
                             </div>
+                            <div class="form-group" if.bind="user.editing" style="margin-top:4px;margin-bottom:0px;">
+                                <help topic="how-to-select-videos" position="bottom"></help>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
