minor alignment issue

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -52,7 +52,7 @@
 
     <div class="member-of-the-day">
         <div>
-            <span>
+            <span style="padding-top:2px;">
                 <span class="hidden-xs member-prefix">${member_prefix & t}</span>
                 <img class="member-image" src.bind="member_of_the_day.face_photo_url" />
                 <span class="member-name" css="direction:${theme.rtltr};">${member_of_the_day.name}</span>
