--- a/src/resources/elements/timeline.html
+++ b/src/resources/elements/timeline.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./timeline.css"></require>
     <div css="width: ${timeline_width}px;position:relative;">
-        <span style="float:right;position:absolute;top:-30px;right:23px;font-size:130%;">
+        <span style="float:right;position:absolute;top:-30px;font-size:130%;">
             <b>${'timeline' & t}:</b>
             ${'select-years-range' & t}&nbsp;
             <help topic='select-years-range'></help>
