--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -89,7 +89,7 @@
                             repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' : name | take : 9999">
                             <a click.delegate="maximize_photo(photo, $event, $index)" tapandhold="500" longtouch.delegate="toggle_selection(photo)" 
                                 class.bind="photo.selected" >
-                                <img src="${photo.photo_square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" 
+                                <img src="${photo[photo.side].square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" 
                                     height="${photo_size}" style="margin:0;cursor:pointer;" class.bind="photo.flipable" 
                                     draggable="false" />
                             </a>
